log
Thu, Mar 20, 2025 11:00:23 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Fri, Mar 21, 2025  2:16:29 AM: 
 tests:  0|5
total_score: 0/70
d9e98a8
Fri, Mar 21, 2025 10:11:16 AM: 
 tests:  1|4
total_score: 10/70
305b538
Fri, Mar 21, 2025 10:16:42 AM: 
 tests:  0|5
total_score: 0/70
a2afb8a
Fri, Mar 21, 2025 10:19:14 AM: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:81:15: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    while(dato = pop(P1) != NULL){
               ^
exercises.c:81:4: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
    while(dato = pop(P1) != NULL){
    ^~~~~
exercises.c:84:15: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    while(dato = pop(pila_aux)!= NULL){
               ^
exercises.c:84:4: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
    while(dato = pop(pila_aux)!= NULL){
    ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
32d1490
Fri, Mar 21, 2025 10:26:20 AM: 
 exercises.c | 15 ++++++++++-----
 1 file changed, 10 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:46:33: error: expected expression before ')' token
    for(size_t i = 1; i <= 10; ++){
                                 ^
exercises.c:48:7: error: unknown type name 'num'
       num* = i;
       ^~~
exercises.c:48:12: error: expected identifier or '(' before '=' token
       num* = i;
            ^
exercises.c:49:18: error: 'num' undeclared (first use in this function)
       pushBack(L,num);
                  ^~~
exercises.c:49:18: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
25e24cb
